[gd_scene load_steps=9 format=3 uid="uid://dcxtmhlbe6rvh"]

[ext_resource type="Script" uid="uid://c1i2nsu8rrbvc" path="res://scripts/level_selection.gd" id="1_tuscg"]
[ext_resource type="Texture2D" uid="uid://brp4euwugc18f" path="res://assets/background.png" id="2_42rqe"]
[ext_resource type="FontFile" uid="uid://b25431rxog83j" path="res://assets/fonts/Kenney Blocks.ttf" id="3_rcujv"]
[ext_resource type="Texture2D" uid="uid://cdunkljd6up72" path="res://assets/bottom_ui.png" id="4_efsdc"]
[ext_resource type="Texture2D" uid="uid://rdtfrw11aqkw" path="res://assets/buttons/empty_button.png" id="5_42rqe"]

[sub_resource type="LabelSettings" id="LabelSettings_wu84c"]
font = ExtResource("3_rcujv")
font_size = 128
font_color = Color(0.486275, 0.847059, 0.921569, 1)
outline_size = 64
outline_color = Color(0.270588, 0.254902, 0.580392, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_8ln24"]
font = ExtResource("3_rcujv")
font_size = 48
font_color = Color(0.270588, 0.254902, 0.580392, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rcujv"]
font = ExtResource("3_rcujv")
font_size = 350
font_color = Color(0.270588, 0.254902, 0.580392, 1)

[node name="Levels" type="Node2D"]
script = ExtResource("1_tuscg")

[node name="background" type="TextureRect" parent="."]
offset_right = 576.0
offset_bottom = 1024.0
texture = ExtResource("2_42rqe")

[node name="title_label" type="Label" parent="."]
offset_left = 6.0
offset_top = 89.0
offset_right = 573.0
offset_bottom = 476.0
text = "LEVEL"
label_settings = SubResource("LabelSettings_wu84c")
horizontal_alignment = 1

[node name="return_button" type="TextureButton" parent="."]
offset_top = 853.0
offset_right = 576.0
offset_bottom = 945.0
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(287, 45)
texture_normal = ExtResource("4_efsdc")

[node name="return_label" type="Label" parent="return_button"]
layout_mode = 0
offset_left = 6.0
offset_top = 2.0
offset_right = 573.0
offset_bottom = 92.0
text = "Return"
label_settings = SubResource("LabelSettings_8ln24")
horizontal_alignment = 1

[node name="button_level1" type="TextureButton" parent="."]
offset_left = -3.0
offset_top = 379.0
offset_right = 1197.0
offset_bottom = 1579.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("5_42rqe")

[node name="label_level1" type="Label" parent="button_level1"]
layout_mode = 0
offset_left = 500.0
offset_top = 320.0
offset_right = 763.0
offset_bottom = 846.0
text = "1"
label_settings = SubResource("LabelSettings_rcujv")

[node name="button_level2" type="TextureButton" parent="."]
offset_left = 198.0
offset_top = 379.0
offset_right = 1398.0
offset_bottom = 1579.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("5_42rqe")

[node name="label_level2" type="Label" parent="button_level2"]
layout_mode = 0
offset_left = 500.0
offset_top = 320.0
offset_right = 763.0
offset_bottom = 846.0
text = "2"
label_settings = SubResource("LabelSettings_rcujv")

[node name="button_level3" type="TextureButton" parent="."]
offset_left = 395.0
offset_top = 379.0
offset_right = 1595.0
offset_bottom = 1579.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("5_42rqe")

[node name="label_level3" type="Label" parent="button_level3"]
layout_mode = 0
offset_left = 500.0
offset_top = 320.0
offset_right = 763.0
offset_bottom = 846.0
text = "3"
label_settings = SubResource("LabelSettings_rcujv")

[node name="button_level4" type="TextureButton" parent="."]
offset_left = -3.0
offset_top = 546.0
offset_right = 1197.0
offset_bottom = 1746.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("5_42rqe")

[node name="label_level4" type="Label" parent="button_level4"]
layout_mode = 0
offset_left = 500.0
offset_top = 320.0
offset_right = 763.0
offset_bottom = 846.0
text = "4"
label_settings = SubResource("LabelSettings_rcujv")

[node name="button_level5" type="TextureButton" parent="."]
offset_left = 198.0
offset_top = 546.0
offset_right = 1398.0
offset_bottom = 1746.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("5_42rqe")

[node name="label_level5" type="Label" parent="button_level5"]
layout_mode = 0
offset_left = 500.0
offset_top = 320.0
offset_right = 763.0
offset_bottom = 846.0
text = "5"
label_settings = SubResource("LabelSettings_rcujv")

[node name="button_level6" type="TextureButton" parent="."]
offset_left = 395.0
offset_top = 546.0
offset_right = 1595.0
offset_bottom = 1746.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("5_42rqe")

[node name="label_level6" type="Label" parent="button_level6"]
layout_mode = 0
offset_left = 500.0
offset_top = 320.0
offset_right = 763.0
offset_bottom = 846.0
text = "6"
label_settings = SubResource("LabelSettings_rcujv")

[connection signal="mouse_entered" from="return_button" to="." method="_on_retun_button_mouse_entered"]
[connection signal="mouse_exited" from="return_button" to="." method="_on_retun_button_mouse_exited"]
[connection signal="pressed" from="return_button" to="." method="_on_retun_button_pressed"]
[connection signal="mouse_entered" from="button_level1" to="." method="_on_button_level_1_mouse_entered"]
[connection signal="mouse_exited" from="button_level1" to="." method="_on_button_level_1_mouse_exited"]
[connection signal="pressed" from="button_level1" to="." method="_on_button_level_1_pressed"]
[connection signal="mouse_entered" from="button_level2" to="." method="_on_button_level_2_mouse_entered"]
[connection signal="mouse_exited" from="button_level2" to="." method="_on_button_level_2_mouse_exited"]
[connection signal="pressed" from="button_level2" to="." method="_on_button_level_2_pressed"]
[connection signal="mouse_entered" from="button_level3" to="." method="_on_button_level_3_mouse_entered"]
[connection signal="mouse_exited" from="button_level3" to="." method="_on_button_level_3_mouse_exited"]
[connection signal="pressed" from="button_level3" to="." method="_on_button_level_3_pressed"]
[connection signal="mouse_entered" from="button_level4" to="." method="_on_button_level_4_mouse_entered"]
[connection signal="mouse_exited" from="button_level4" to="." method="_on_button_level_4_mouse_exited"]
[connection signal="pressed" from="button_level4" to="." method="_on_button_level_4_pressed"]
[connection signal="mouse_entered" from="button_level5" to="." method="_on_button_level_5_mouse_entered"]
[connection signal="mouse_exited" from="button_level5" to="." method="_on_button_level_5_mouse_exited"]
[connection signal="pressed" from="button_level5" to="." method="_on_button_level_5_pressed"]
[connection signal="mouse_entered" from="button_level6" to="." method="_on_button_level_6_mouse_entered"]
[connection signal="mouse_exited" from="button_level6" to="." method="_on_button_level_6_mouse_exited"]
[connection signal="pressed" from="button_level6" to="." method="_on_button_level_6_pressed"]
